@@ -352,3 +352,4 @@
     - Now, the maximum length of a non-wrapped string literal is 400.
     - Wrap string literals only in UTF-16 RC.
     - Fixed Search (Ctrl+F).
+    - ANICURSOR and ANIICON keywords are not available on old environments. Use numeric instead of them.
