@@ -352,3 +352,4 @@
     - La lunghezza massima di una stringa senza a capo automatico è 400.
     - A capo automatico stringa solo in RC UTF-16.
     - Corretta ricerca (Ctrl+F).
+    - ANICURSOR and ANIICON keywords are not available on old environments. Use numeric instead of them.
