@@ -696,3 +696,4 @@
     - 折り返しをしない文字列リテラルの最大長を400にする。
     - UTF-16のときのみ、文字列リテラルの折り返しをする。
     - 検索を修正 (Ctrl+F)。
+    - ANICURSORとANIICONキーワードは古い環境では利用できません。それらの代わりに数値を使います。
